--- a/js/index.html
+++ b/js/index.html
@@ -213,7 +213,52 @@
         </div>
     </section>
     <!-- FEATURES -->
-
+    <section class="features section-inner">
+        <div class="container">
+            <div class="features__content">
+                <div class="features__left">
+                    <div class="title">
+                        <p>Our Features</p>
+                        <h2>Behind The Story <br> Of Samar Agency</h2>
+                    </div>
+                    <div class="features__group">
+                        <div class="features__item">
+                            <div class="features__bg">
+                                <i class="flaticon-idea"></i>
+                                <div>
+                                    <h3>Idea & Analysis Gathering</h3>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit Ab ut impedit pariatur error.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="features__item">
+                            <div class="features__bg">
+                                <i class="flaticon-coding"></i>
+                                <div>
+                                    <h3>Design & Developing</h3>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit Ab ut impedit pariatur error.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="features__item">
+                            <div class="features__bg">
+                                <i class="flaticon-rocket"></i>
+                                <div>
+                                    <h3>Testing & Lunching</h3>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit Ab ut impedit pariatur error.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="features__right">
+                    <div class="features__banner">
+                        <img src="../image/pic3.png" alt="pic3.png">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <!-- PORTFOLIO -->
 
     <!-- BLOG -->
