--- a/js/index.html
+++ b/js/index.html
@@ -20,6 +20,8 @@
         href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css" />
     <!-- Flaticon -->
     <link rel="stylesheet" href="../css/flaticon/flaticon.css" />
+    <!-- Fancybox -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@6.0/dist/fancybox/fancybox.css" />
 
     <!-- My CSS -->
     <link rel="stylesheet" href="../css/index.css" />
@@ -186,7 +188,7 @@
         </div>
     </section>
     <!-- NUMBER -->
-    <section class="number"> 
+    <section class="number">
         <div class="container">
             <div class="number__content">
                 <div class="number__item">
@@ -227,7 +229,8 @@
                                 <i class="flaticon-idea"></i>
                                 <div>
                                     <h3>Idea & Analysis Gathering</h3>
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit Ab ut impedit pariatur error.</p>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit Ab ut impedit pariatur
+                                        error.</p>
                                 </div>
                             </div>
                         </div>
@@ -236,7 +239,8 @@
                                 <i class="flaticon-coding"></i>
                                 <div>
                                     <h3>Design & Developing</h3>
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit Ab ut impedit pariatur error.</p>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit Ab ut impedit pariatur
+                                        error.</p>
                                 </div>
                             </div>
                         </div>
@@ -245,7 +249,8 @@
                                 <i class="flaticon-rocket"></i>
                                 <div>
                                     <h3>Testing & Lunching</h3>
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit Ab ut impedit pariatur error.</p>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit Ab ut impedit pariatur
+                                        error.</p>
                                 </div>
                             </div>
                         </div>
@@ -260,16 +265,121 @@
         </div>
     </section>
     <!-- PORTFOLIO -->
-
+    <section class="portfolio section-inner">
+        <div class="container">
+            <div class="title">
+                <p>Portfolio</p>
+                <h2>Our Latest Work</h2>
+            </div>
+            <div class="portfolio__content">
+                <div class="portfolio__item portfolio__item--large1">
+                    <img src="../image/pic1_2.jpg" alt="pic1_2.jpg">
+                    <div class="portfolio__overlay">
+                        <div class="portfolio__icon">
+                            <a href="../image/pic1_2.jpg" data-fancybox="gallery" data-caption="Caption #1">
+                                <i class="la la-plus"></i>
+                            </a>
+                        </div>
+                        <div class="portfolio__text">
+                            <h3>Software Landing</h3>
+                            <p>By Alibaba</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="portfolio__item">
+                    <img src="../image/pic2_1.jpg" alt="pic2_1.jpg">
+                    <div class="portfolio__overlay">
+                        <div class="portfolio__icon">
+                            <a href="../image/pic2_1.jpg" data-fancybox="gallery" data-caption="Caption #1">
+                                <i class="la la-plus"></i>
+                            </a>
+                        </div>
+                        <div class="portfolio__text">
+                            <h3>Software Landing</h3>
+                            <p>By Alibaba</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="portfolio__item">
+                    <img src="../image/pic3_1.jpg" alt="pic3_1.jpg">
+                    <div class="portfolio__overlay">
+                        <div class="portfolio__icon">
+                            <a href="../image/pic3_1.jpg" data-fancybox="gallery" data-caption="Caption #1">
+                                <i class="la la-plus"></i>
+                            </a>
+                        </div>
+                        <div class="portfolio__text">
+                            <h3>Software Landing</h3>
+                            <p>By Alibaba</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="portfolio__item">
+                    <img src="../image/pic4.jpg" alt="pic4.jpg">
+                    <div class="portfolio__overlay">
+                        <div class="portfolio__icon">
+                            <a href="../image/pic4.jpg" data-fancybox="gallery" data-caption="Caption #1">
+                                <i class="la la-plus"></i>
+                            </a>
+                        </div>
+                        <div class="portfolio__text">
+                            <h3>Software Landing</h3>
+                            <p>By Alibaba</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="portfolio__item portfolio__item--large1">
+                    <img src="../image/pic5.jpg" alt="pic5.jpg">
+                    <div class="portfolio__overlay">
+                        <div class="portfolio__icon">
+                            <a href="../image/pic5.jpg" data-fancybox="gallery" data-caption="Caption #1">
+                                <i class="la la-plus"></i>
+                            </a>
+                        </div>
+                        <div class="portfolio__text">
+                            <h3>Software Landing</h3>
+                            <p>By Alibaba</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="portfolio__item portfolio__item--large2">
+                    <img src="../image/pic6.jpg" alt="pic6.jpg">
+                    <div class="portfolio__overlay">
+                        <div class="portfolio__icon">
+                            <a href="../image/pic6.jpg" data-fancybox="gallery" data-caption="Caption #1">
+                                <i class="la la-plus"></i>
+                            </a>
+                        </div>
+                        <div class="portfolio__text">
+                            <h3>Software Landing</h3>
+                            <p>By Alibaba</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <!-- BLOG -->
 
+    <!-- FOOTER -->
     <footer>
         <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     </footer>
 
+    <!-- -----------SCRIPTS----------- -->
     <!-- JQuery -->
     <script src="https://code.jquery.com/jquery-3.7.1.js"
         integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
+
+    <!-- Fancybox -->
+    <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@6.0/dist/fancybox/fancybox.umd.js"></script>
+    <script>
+        Fancybox.bind('[data-fancybox="gallery"]', {
+            // Your custom options for a specific gallery
+        });
+    </script>
+
+
 </body>
 
 </html>
