portfolio: hoàn thiện popup ảnh fancybox

--- a/js/index.html
+++ b/js/index.html
@@ -276,7 +276,7 @@
                     <img src="../image/pic1_2.jpg" alt="pic1_2.jpg">
                     <div class="portfolio__overlay">
                         <div class="portfolio__icon">
-                            <a href="../image/pic1_2.jpg" data-fancybox="gallery" data-caption="Caption #1">
+                            <a  href="../image/pic1_2.jpg" data-fancybox="gallery" data-caption="Caption pic1_2.jpg" data-thumb="../image/pic1_2.jpg">">
                                 <i class="la la-plus"></i>
                             </a>
                         </div>
@@ -290,7 +290,7 @@
                     <img src="../image/pic2_1.jpg" alt="pic2_1.jpg">
                     <div class="portfolio__overlay">
                         <div class="portfolio__icon">
-                            <a href="../image/pic2_1.jpg" data-fancybox="gallery" data-caption="Caption #1">
+                            <a href="../image/pic2_1.jpg" data-fancybox="gallery" data-caption="Caption pic2_1.jpg" data-thumb="../image/pic2_1.jpg">
                                 <i class="la la-plus"></i>
                             </a>
                         </div>
@@ -304,7 +304,7 @@
                     <img src="../image/pic3_1.jpg" alt="pic3_1.jpg">
                     <div class="portfolio__overlay">
                         <div class="portfolio__icon">
-                            <a href="../image/pic3_1.jpg" data-fancybox="gallery" data-caption="Caption #1">
+                            <a href="../image/pic3_1.jpg" data-fancybox="gallery" data-caption="Caption pic3_1.jpg" data-thumb="../image/pic3_1.jpg">
                                 <i class="la la-plus"></i>
                             </a>
                         </div>
@@ -318,7 +318,7 @@
                     <img src="../image/pic4.jpg" alt="pic4.jpg">
                     <div class="portfolio__overlay">
                         <div class="portfolio__icon">
-                            <a href="../image/pic4.jpg" data-fancybox="gallery" data-caption="Caption #1">
+                            <a href="../image/pic4.jpg" data-fancybox="gallery" data-caption="Caption pic4.jpg" data-thumb="../image/pic4.jpg">
                                 <i class="la la-plus"></i>
                             </a>
                         </div>
@@ -332,7 +332,7 @@
                     <img src="../image/pic5.jpg" alt="pic5.jpg">
                     <div class="portfolio__overlay">
                         <div class="portfolio__icon">
-                            <a href="../image/pic5.jpg" data-fancybox="gallery" data-caption="Caption #1">
+                            <a href="../image/pic5.jpg" data-fancybox="gallery" data-caption="Caption pic5.jpg" data-thumb="../image/pic5.jpg">
                                 <i class="la la-plus"></i>
                             </a>
                         </div>
@@ -346,7 +346,7 @@
                     <img src="../image/pic6.jpg" alt="pic6.jpg">
                     <div class="portfolio__overlay">
                         <div class="portfolio__icon">
-                            <a href="../image/pic6.jpg" data-fancybox="gallery" data-caption="Caption #1">
+                            <a href="../image/pic6.jpg" data-fancybox="gallery" data-caption="Caption pic6.jpg" data-thumb="../image/pic6.jpg">
                                 <i class="la la-plus"></i>
                             </a>
                         </div>
