--- a/js/index.html
+++ b/js/index.html
@@ -276,7 +276,8 @@
                     <img src="../image/pic1_2.jpg" alt="pic1_2.jpg">
                     <div class="portfolio__overlay">
                         <div class="portfolio__icon">
-                            <a  href="../image/pic1_2.jpg" data-fancybox="gallery" data-caption="Caption pic1_2.jpg" data-thumb="../image/pic1_2.jpg">">
+                            <a href="../image/pic1_2.jpg" data-fancybox="gallery" data-caption="Caption pic1_2.jpg"
+                                data-thumb="../image/pic1_2.jpg">">
                                 <i class="la la-plus"></i>
                             </a>
                         </div>
@@ -290,7 +291,8 @@
                     <img src="../image/pic2_1.jpg" alt="pic2_1.jpg">
                     <div class="portfolio__overlay">
                         <div class="portfolio__icon">
-                            <a href="../image/pic2_1.jpg" data-fancybox="gallery" data-caption="Caption pic2_1.jpg" data-thumb="../image/pic2_1.jpg">
+                            <a href="../image/pic2_1.jpg" data-fancybox="gallery" data-caption="Caption pic2_1.jpg"
+                                data-thumb="../image/pic2_1.jpg">
                                 <i class="la la-plus"></i>
                             </a>
                         </div>
@@ -304,7 +306,8 @@
                     <img src="../image/pic3_1.jpg" alt="pic3_1.jpg">
                     <div class="portfolio__overlay">
                         <div class="portfolio__icon">
-                            <a href="../image/pic3_1.jpg" data-fancybox="gallery" data-caption="Caption pic3_1.jpg" data-thumb="../image/pic3_1.jpg">
+                            <a href="../image/pic3_1.jpg" data-fancybox="gallery" data-caption="Caption pic3_1.jpg"
+                                data-thumb="../image/pic3_1.jpg">
                                 <i class="la la-plus"></i>
                             </a>
                         </div>
@@ -318,7 +321,8 @@
                     <img src="../image/pic4.jpg" alt="pic4.jpg">
                     <div class="portfolio__overlay">
                         <div class="portfolio__icon">
-                            <a href="../image/pic4.jpg" data-fancybox="gallery" data-caption="Caption pic4.jpg" data-thumb="../image/pic4.jpg">
+                            <a href="../image/pic4.jpg" data-fancybox="gallery" data-caption="Caption pic4.jpg"
+                                data-thumb="../image/pic4.jpg">
                                 <i class="la la-plus"></i>
                             </a>
                         </div>
@@ -332,7 +336,8 @@
                     <img src="../image/pic5.jpg" alt="pic5.jpg">
                     <div class="portfolio__overlay">
                         <div class="portfolio__icon">
-                            <a href="../image/pic5.jpg" data-fancybox="gallery" data-caption="Caption pic5.jpg" data-thumb="../image/pic5.jpg">
+                            <a href="../image/pic5.jpg" data-fancybox="gallery" data-caption="Caption pic5.jpg"
+                                data-thumb="../image/pic5.jpg">
                                 <i class="la la-plus"></i>
                             </a>
                         </div>
@@ -346,7 +351,8 @@
                     <img src="../image/pic6.jpg" alt="pic6.jpg">
                     <div class="portfolio__overlay">
                         <div class="portfolio__icon">
-                            <a href="../image/pic6.jpg" data-fancybox="gallery" data-caption="Caption pic6.jpg" data-thumb="../image/pic6.jpg">
+                            <a href="../image/pic6.jpg" data-fancybox="gallery" data-caption="Caption pic6.jpg"
+                                data-thumb="../image/pic6.jpg">
                                 <i class="la la-plus"></i>
                             </a>
                         </div>
@@ -360,7 +366,37 @@
         </div>
     </section>
     <!-- BLOG -->
+    <section class="blog section-inner">
+        <div class="container">
+            <div class="title">
+                <p>Our Blog</p>
+                <h2>Latest News & Blog</h2>
+            </div>
+            <div class="blog__content">
+                <div class="blog__item">
+                    <div class="blog__header">
+                        <img src="../image/pic1_1.jpg" alt="pic1_1.jpg">
+                        <p>30 April 2025</p>
+                    </div>
+                    <div class="blog__body">
+                        <h3>Lorem ipsum dolor sit amet consectetur. </h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum dolore ad vitae, fuga alias
+                            similique!</p>
+                    </div>
+                    <div class="blog__footer">
+                        <p>
+                            <i class="las la-user-circle"></i>
+                            By
+                            <span>Oh Bama</span>
+                        </p>
+                        <p>
+                            <i class="las la-comment"></i>
+                            <span>Comments 19</span>
+                        </p>
+                    </div>
+                </div>
 
+    </section>
     <!-- FOOTER -->
     <footer>
         <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
