--- a/js/index.html
+++ b/js/index.html
@@ -513,11 +513,36 @@
                         </p>
                     </div>
                 </div>
-
     </section>
     <!-- FOOTER -->
     <footer>
-        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <div class="container">
+        <div class="footer__top">
+            <div class="footer__text">
+                <h2>Subscribe To Our Newsletter</h2>
+            </div>
+            <div class="footer__form">
+                <form action="#">
+                    <input type="email" placeholder="Your email address">
+                    <button>
+                        <i class="las la-paper-plane"></i>
+                    </button>
+                </form>
+            </div>
+        </div>
+        <div class="footer__bottom">
+
+        </div>
+        <div class="footer__copyright">
+
+        </div>
+    </div>
+
+
+
+
+
+
     </footer>
 
     <!-- -----------SCRIPTS----------- -->
