footer: DONE chỉnh sửa lại cantainer cho đúng

--- a/js/index.html
+++ b/js/index.html
@@ -661,9 +661,10 @@
                         </li>
                     </ul>
                 </div>
-
             </div>
-            <div class="footer__copyright">
+        </div>
+        <div class="footer__copyright ">
+            <div class="container">
                 <div class="footer__left">
                     Copyright © 2021
                     <span>DexignZone</span>
@@ -681,9 +682,7 @@
                     </a>
                 </div>
             </div>
-
-
-
+        </div>
 
 
     </footer>
