dời file index.html, backToTop chưa làm đc

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet"
         href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css" />
     <!-- Flaticon -->
-    <link rel="stylesheet" href="../css/flaticon/flaticon.css" />
+    <link rel="stylesheet" href="./css/flaticon/flaticon.css" />
     <!-- Fancybox -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@6.0/dist/fancybox/fancybox.css" />
     <!-- Owl Carousel -->
@@ -32,7 +32,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <!-- My CSS -->
-    <link rel="stylesheet" href="../css/index.css" />
+    <link rel="stylesheet" href="./css/index.css" />
 </head>
 
 <body>
@@ -40,7 +40,7 @@
         <div class="container">
             <div class="header__content">
                 <a href="#">
-                    <img src="../image/logo-2.png" alt="logo samar" />
+                    <img src="./image/logo-2.png" alt="logo samar" />
                 </a>
                 <nav>
                     <ul>
@@ -119,7 +119,7 @@
                 </div>
                 <div class="saCarousel__right">
                     <div class="saCarousel__banner">
-                        <img src="../image/pic3_1.png" alt="pic3_1.png">
+                        <img src="./image/pic3_1.png" alt="pic3_1.png">
                     </div>
                 </div>
             </div>
@@ -134,19 +134,19 @@
             </div>
             <div class="services__content">
                 <div class="services__item">
-                    <img src="../image/pic1_3.jpg" alt="pic1_3">
+                    <img src="./image/pic1_3.jpg" alt="pic1_3">
                     <h3>Web Development</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut a sequi consequuntur quisquam!
                         Dolor, laborum.</p>
                 </div>
                 <div class="services__item">
-                    <img src="../image/pic2_2.jpg" alt="pic2_2">
+                    <img src="./image/pic2_2.jpg" alt="pic2_2">
                     <h3>Strategy & Research</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut a sequi consequuntur quisquam!
                         Dolor, laborum.</p>
                 </div>
                 <div class="services__item">
-                    <img src="../image/pic3_2.jpg" alt="pic3_2">
+                    <img src="./image/pic3_2.jpg" alt="pic3_2">
                     <h3>Growth Tracking</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut a sequi consequuntur quisquam!
                         Dolor, laborum.</p>
@@ -159,7 +159,7 @@
         <div class="container">
             <div class="aboutUs__content">
                 <div class="aboutUs__left">
-                    <img src="../image/pic1.jpg" alt="pic1.jpg">
+                    <img src="./image/pic1.jpg" alt="pic1.jpg">
                 </div>
                 <div class="aboutUs__right">
                     <div class="title">
@@ -266,7 +266,7 @@
                 </div>
                 <div class="features__right">
                     <div class="features__banner">
-                        <img src="../image/pic3.png" alt="pic3.png">
+                        <img src="./image/pic3.png" alt="pic3.png">
                     </div>
                 </div>
             </div>
@@ -281,11 +281,11 @@
             </div>
             <div class="portfolio__content">
                 <div class="portfolio__item portfolio__item--large1">
-                    <img src="../image/pic1_2.jpg" alt="pic1_2.jpg">
+                    <img src="./image/pic1_2.jpg" alt="pic1_2.jpg">
                     <div class="portfolio__overlay">
                         <div class="portfolio__icon">
-                            <a href="../image/pic1_2.jpg" data-fancybox="gallery" data-caption="Caption pic1_2.jpg"
-                                data-thumb="../image/pic1_2.jpg">">
+                            <a href="./image/pic1_2.jpg" data-fancybox="gallery" data-caption="Caption pic1_2.jpg"
+                                data-thumb="./image/pic1_2.jpg">">
                                 <i class="la la-plus"></i>
                             </a>
                         </div>
@@ -296,11 +296,11 @@
                     </div>
                 </div>
                 <div class="portfolio__item">
-                    <img src="../image/pic2_1.jpg" alt="pic2_1.jpg">
+                    <img src="./image/pic2_1.jpg" alt="pic2_1.jpg">
                     <div class="portfolio__overlay">
                         <div class="portfolio__icon">
-                            <a href="../image/pic2_1.jpg" data-fancybox="gallery" data-caption="Caption pic2_1.jpg"
-                                data-thumb="../image/pic2_1.jpg">
+                            <a href="./image/pic2_1.jpg" data-fancybox="gallery" data-caption="Caption pic2_1.jpg"
+                                data-thumb="./image/pic2_1.jpg">
                                 <i class="la la-plus"></i>
                             </a>
                         </div>
@@ -311,11 +311,11 @@
                     </div>
                 </div>
                 <div class="portfolio__item">
-                    <img src="../image/pic3_1.jpg" alt="pic3_1.jpg">
+                    <img src="./image/pic3_1.jpg" alt="pic3_1.jpg">
                     <div class="portfolio__overlay">
                         <div class="portfolio__icon">
-                            <a href="../image/pic3_1.jpg" data-fancybox="gallery" data-caption="Caption pic3_1.jpg"
-                                data-thumb="../image/pic3_1.jpg">
+                            <a href="./image/pic3_1.jpg" data-fancybox="gallery" data-caption="Caption pic3_1.jpg"
+                                data-thumb="./image/pic3_1.jpg">
                                 <i class="la la-plus"></i>
                             </a>
                         </div>
@@ -326,11 +326,11 @@
                     </div>
                 </div>
                 <div class="portfolio__item">
-                    <img src="../image/pic4.jpg" alt="pic4.jpg">
+                    <img src="./image/pic4.jpg" alt="pic4.jpg">
                     <div class="portfolio__overlay">
                         <div class="portfolio__icon">
-                            <a href="../image/pic4.jpg" data-fancybox="gallery" data-caption="Caption pic4.jpg"
-                                data-thumb="../image/pic4.jpg">
+                            <a href="./image/pic4.jpg" data-fancybox="gallery" data-caption="Caption pic4.jpg"
+                                data-thumb="./image/pic4.jpg">
                                 <i class="la la-plus"></i>
                             </a>
                         </div>
@@ -341,11 +341,11 @@
                     </div>
                 </div>
                 <div class="portfolio__item portfolio__item--large1">
-                    <img src="../image/pic5.jpg" alt="pic5.jpg">
+                    <img src="./image/pic5.jpg" alt="pic5.jpg">
                     <div class="portfolio__overlay">
                         <div class="portfolio__icon">
-                            <a href="../image/pic5.jpg" data-fancybox="gallery" data-caption="Caption pic5.jpg"
-                                data-thumb="../image/pic5.jpg">
+                            <a href="./image/pic5.jpg" data-fancybox="gallery" data-caption="Caption pic5.jpg"
+                                data-thumb="./image/pic5.jpg">
                                 <i class="la la-plus"></i>
                             </a>
                         </div>
@@ -356,11 +356,11 @@
                     </div>
                 </div>
                 <div class="portfolio__item portfolio__item--large2">
-                    <img src="../image/pic6.jpg" alt="pic6.jpg">
+                    <img src="./image/pic6.jpg" alt="pic6.jpg">
                     <div class="portfolio__overlay">
                         <div class="portfolio__icon">
-                            <a href="../image/pic6.jpg" data-fancybox="gallery" data-caption="Caption pic6.jpg"
-                                data-thumb="../image/pic6.jpg">
+                            <a href="./image/pic6.jpg" data-fancybox="gallery" data-caption="Caption pic6.jpg"
+                                data-thumb="./image/pic6.jpg">
                                 <i class="la la-plus"></i>
                             </a>
                         </div>
@@ -383,7 +383,7 @@
             <div class="blog__content owl-carousel">
                 <div class="blog__item">
                     <div class="blog__header">
-                        <img src="../image/pic1_1.jpg" alt="pic1_1.jpg">
+                        <img src="./image/pic1_1.jpg" alt="pic1_1.jpg">
                         <p>30 April 2025</p>
                     </div>
                     <div class="blog__body">
@@ -405,7 +405,7 @@
                 </div>
                 <div class="blog__item">
                     <div class="blog__header">
-                        <img src="../image/pic2.jpg" alt="pic2.jpg">
+                        <img src="./image/pic2.jpg" alt="pic2.jpg">
                         <p>30 April 2025</p>
                     </div>
                     <div class="blog__body">
@@ -427,7 +427,7 @@
                 </div>
                 <div class="blog__item">
                     <div class="blog__header">
-                        <img src="../image/pic3.jpg" alt="pic3.jpg">
+                        <img src="./image/pic3.jpg" alt="pic3.jpg">
                         <p>30 April 2025</p>
                     </div>
                     <div class="blog__body">
@@ -449,7 +449,7 @@
                 </div>
                 <div class="blog__item">
                     <div class="blog__header">
-                        <img src="../image/pic1_1.jpg" alt="pic1_1.jpg">
+                        <img src="./image/pic1_1.jpg" alt="pic1_1.jpg">
                         <p>30 April 2025</p>
                     </div>
                     <div class="blog__body">
@@ -471,7 +471,7 @@
                 </div>
                 <div class="blog__item">
                     <div class="blog__header">
-                        <img src="../image/pic2.jpg" alt="pic2.jpg">
+                        <img src="./image/pic2.jpg" alt="pic2.jpg">
                         <p>30 April 2025</p>
                     </div>
                     <div class="blog__body">
@@ -493,7 +493,7 @@
                 </div>
                 <div class="blog__item">
                     <div class="blog__header">
-                        <img src="../image/pic3.jpg" alt="pic3.jpg">
+                        <img src="./image/pic3.jpg" alt="pic3.jpg">
                         <p>30 April 2025</p>
                     </div>
                     <div class="blog__body">
@@ -533,7 +533,7 @@
             <div class="footer__bottom">
                 <div class="footer__item">
                     <a href="#">
-                        <img src="../image/logo-white.png" alt="logo-white.png">
+                        <img src="./image/logo-white.png" alt="logo-white.png">
                     </a>
                     <ul class="footer__contact">
                         <li>
@@ -683,9 +683,11 @@
                 </div>
             </div>
         </div>
-
-
     </footer>
+    <!-- backtotop -->
+    <a href="#" class="backToTop cd-top text-replace js-cd-top cd-top--is-visible">
+        <i class="fa fa-arrow-up"></i>
+    </a>
 
     <!-- -----------SCRIPTS----------- -->
     <!-- JQuery -->
@@ -724,7 +726,9 @@
             });
         });
     </script>
-
+    <!-- backToTop -->
+    <script src="./js/util.js"></script>
+    <script src="./js/main.js"></script>
 
 </body>
 
