--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
         href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css"
         integrity="sha512-sMXtMNL1zRzolHYKEujM2AqCLUR9F2C4/05cdbxjjLSRvMQIciEPCQZo++nk7go3BtSuK9kfa/s+a4f4i5pLkw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- Animate.css -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 
     <!-- My CSS -->
     <link rel="stylesheet" href="./css/index.css" />
@@ -94,15 +96,15 @@
             <div class="saCarousel__content">
                 <div class="saCarousel__left">
                     <div class="title">
-                        <p>We are The Best</p>
-                        <h2>Freelance Product Designer Running</h2>
+                        <p class="animate__animated animate__fadeInUp">We are The Best</p>
+                        <h2 class="animate__animated animate__fadeInUp animate__delay-1s">Freelance Product Designer Running</h2>
                     </div>
                     <div class="saCarousel__article">
-                        <p>
+                        <p class="animate__animated animate__fadeInUp animate__delay-2s">
                             We develop the relationships that underpin the next phase in
                             <br> your organisation’s growth.
                         </p>
-                        <ul>
+                        <ul class="animate__animated animate__fadeInUp animate__delay-3s">
                             <li>
                                 <i class="las la-check"></i>
                                 Master's degree in designing
@@ -112,13 +114,13 @@
                                 Outstanding mobile design
                             </li>
                         </ul>
-                        <button class="btn-gradient">
+                        <button class="btn-gradient  animate__animated animate__fadeInUp animate__delay-4s">
                             GET STARTED
                         </button>
                     </div>
                 </div>
                 <div class="saCarousel__right">
-                    <div class="saCarousel__banner">
+                    <div class="saCarousel__banner   animate__animated animate__fadeInUp animate__delay-3s">
                         <img src="./image/pic3_1.png" alt="pic3_1.png">
                     </div>
                 </div>
@@ -158,10 +160,12 @@
     <section class="aboutUs section-inner">
         <div class="container">
             <div class="aboutUs__content">
-                <div class="aboutUs__left">
+                <div class="aboutUs__left  wow animate__animated animate__fadeInLeft" data-wow-duration="2s"
+                    data-wow-delay="0.2s">
                     <img src="./image/pic1.jpg" alt="pic1.jpg">
                 </div>
-                <div class="aboutUs__right">
+                <div class="aboutUs__right  wow animate__animated animate__fadeInRight" data-wow-duration="2s"
+                    data-wow-delay="0.2s">
                     <div class="title">
                         <p>About Us</p>
                         <h2>Build Your Business Website Better</h2>
@@ -227,12 +231,14 @@
         <div class="container">
             <div class="features__content">
                 <div class="features__left">
-                    <div class="title">
+                    <div class="title  wow animate__animated animate__fadeInLeft"data-wow-duration="2s"
+                        data-wow-delay="0.2s" >
                         <p>Our Features</p>
                         <h2>Behind The Story <br> Of Samar Agency</h2>
                     </div>
                     <div class="features__group">
-                        <div class="features__item">
+                        <div class="features__item   wow animate__animated animate__fadeInRight" data-wow-duration="2s"
+                        data-wow-delay="0.4s">
                             <div class="features__bg">
                                 <i class="flaticon-idea"></i>
                                 <div>
@@ -242,7 +248,8 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="features__item">
+                        <div class="features__item wow animate__animated animate__fadeInRight" data-wow-duration="2s"
+                            data-wow-delay="0.6s">
                             <div class="features__bg">
                                 <i class="flaticon-coding"></i>
                                 <div>
@@ -252,7 +259,8 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="features__item">
+                        <div class="features__item  wow animate__animated animate__fadeInRight" data-wow-duration="2s"
+                            data-wow-delay="0.8s">
                             <div class="features__bg">
                                 <i class="flaticon-rocket"></i>
                                 <div>
@@ -280,12 +288,12 @@
                 <h2>Our Latest Work</h2>
             </div>
             <div class="portfolio__content">
-                <div class="portfolio__item portfolio__item--large1">
+                <div class="portfolio__item portfolio__item--large1  wow animate__animated animate__fadeInUp">
                     <img src="./image/pic1_2.jpg" alt="pic1_2.jpg">
                     <div class="portfolio__overlay">
                         <div class="portfolio__icon">
                             <a href="./image/pic1_2.jpg" data-fancybox="gallery" data-caption="Caption pic1_2.jpg"
-                                data-thumb="./image/pic1_2.jpg">">
+                                data-thumb="./image/pic1_2.jpg">
                                 <i class="la la-plus"></i>
                             </a>
                         </div>
@@ -295,7 +303,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="portfolio__item">
+                <div class="portfolio__item  wow animate__animated animate__fadeInUp">
                     <img src="./image/pic2_1.jpg" alt="pic2_1.jpg">
                     <div class="portfolio__overlay">
                         <div class="portfolio__icon">
@@ -310,7 +318,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="portfolio__item">
+                <div class="portfolio__item  wow animate__animated animate__fadeInUp animate__delay-1s">
                     <img src="./image/pic3_1.jpg" alt="pic3_1.jpg">
                     <div class="portfolio__overlay">
                         <div class="portfolio__icon">
@@ -325,7 +333,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="portfolio__item">
+                <div class="portfolio__item  wow animate__animated animate__fadeInUp animate__delay-1s">
                     <img src="./image/pic4.jpg" alt="pic4.jpg">
                     <div class="portfolio__overlay">
                         <div class="portfolio__icon">
@@ -340,7 +348,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="portfolio__item portfolio__item--large1">
+                <div class="portfolio__item portfolio__item--large1  wow animate__animated animate__fadeInUp animate__delay-2s">
                     <img src="./image/pic5.jpg" alt="pic5.jpg">
                     <div class="portfolio__overlay">
                         <div class="portfolio__icon">
@@ -355,7 +363,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="portfolio__item portfolio__item--large2">
+                <div class="portfolio__item portfolio__item--large2   wow animate__animated animate__fadeInUp animate__delay-1s">
                     <img src="./image/pic6.jpg" alt="pic6.jpg">
                     <div class="portfolio__overlay">
                         <div class="portfolio__icon">
@@ -517,7 +525,7 @@
     <!-- FOOTER -->
     <footer>
         <div class="container">
-            <div class="footer__top">
+            <div class="footer__top  wow animate__animated animate__fadeInUp">
                 <div class="footer__text">
                     <h2>Subscribe To Our Newsletter</h2>
                 </div>
@@ -530,8 +538,8 @@
                     </form>
                 </div>
             </div>
-            <div class="footer__bottom">
-                <div class="footer__item">
+            <div class="footer__bottom  wow animate__animated animate__fadeIn animate__delay-1s">
+                <div class="footer__item ">
                     <a href="#">
                         <img src="./image/logo-white.png" alt="logo-white.png">
                     </a>
@@ -556,7 +564,7 @@
                         </li>
                     </ul>
                 </div>
-                <div class="footer__item">
+                <div class="footer__item ">
                     <h3>Our Links</h3>
                     <ul>
                         <li>
@@ -591,7 +599,7 @@
                         </li>
                     </ul>
                 </div>
-                <div class="footer__item">
+                <div class="footer__item ">
                     <h3>Our Services</h3>
                     <ul>
                         <li>
@@ -626,7 +634,7 @@
                         </li>
                     </ul>
                 </div>
-                <div class="footer__item">
+                <div class="footer__item ">
                     <h3>Other links</h3>
                     <ul>
                         <li>
@@ -730,6 +738,9 @@
     <script src="./js/util.js"></script>
     <script src="./js/main.js"></script>
 
+    <!-- WOW Animate.css -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js" integrity="sha512-Eak/29OTpb36LLo2r47IpVzPBLXnAMPAVypbSZiZ4Qkf8p/7S/XRG5xp7OKWPPYfJT6metI+IORkR5G8F900+g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script> new WOW().init(); </script>
 </body>
 
 </html>
