--- a/index.html
+++ b/index.html
@@ -205,22 +205,22 @@
             <div class="number__content">
                 <div class="number__item">
                     <i class="flaticon-smile"></i>
-                    <p>10 Ml</p>
+                    <p> <span class="counter">10</span>  Ml</p>
                     <p>Satisfied Clients</p>
                 </div>
                 <div class="number__item">
                     <i class="flaticon-line-chart"></i>
-                    <p>10 Ml</p>
+                    <p><span class="counter">20</span>  Ml</p>
                     <p>Project Completed</p>
                 </div>
                 <div class="number__item">
                     <i class="flaticon-startup"></i>
-                    <p>10 Ml</p>
+                    <p><span class="counter">30</span>  Ml</p>
                     <p>Project Lunched</p>
                 </div>
                 <div class="number__item">
                     <i class="flaticon-confetti"></i>
-                    <p>10 Ml</p>
+                    <p><span class="counter">40</span>  Ml</p>
                     <p>Years Completed</p>
                 </div>
             </div>
@@ -710,6 +710,19 @@
         });
     </script>
 
+    <!-- Count Up -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.js"
+    integrity="sha512-ZKNVEa7gi0Dz4Rq9jXcySgcPiK+5f01CqW+ZoKLLKr9VMXuCsw3RjWiv8ZpIOa0hxO79np7Ec8DDWALM0bDOaQ=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+    <script src="./js/count-up/jquery.counterup.js"></script>
+    <script>
+        $('.counter').counterUp({
+            delay: 10,
+            time: 3000
+        });
+    </script>
+
     <!-- OWL JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"
         integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw=="
@@ -734,6 +747,7 @@
             });
         });
     </script>
+
     <!-- backToTop -->
     <script src="./js/util.js"></script>
     <script src="./js/main.js"></script>
